<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fogos.pt</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fogos_pt_logo_description">Fogos.pt Logo</string>
    <!--Drawer-->
    <string name="fire_registry">Fire Registry</string>
    <string name="fire_list">Fire List</string>
    <string name="fire_map">Map Fire</string>
    <string name="dashboard">Dashboard</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <!--RISK-->
    <string name="lower">Lowest</string>
    <string name="moderated">Moderated</string>
    <string name="high">High</string>
    <string name="veryHigh">Very High</string>
    <string name="max">Max</string>
    <!--Registration-->
    <string name="id_number">Id Number</string>
    <string name="name">Name</string>
    <string name="date">Date Time</string>
    <string name="picture">Picture</string>
    <string name="district">District</string>
    <string name="submit">Report</string>
    <string name="register_fire">Register Fire</string>
    <string name="risk">Risk</string>
    <string name="status">Status</string>
    <string name="county">County</string>
    <string name="observations">Observations</string>
    <string name="aerial">Aerial</string>
    <string name="operational">Operational</string>
    <string name="vehicle">Vehicle</string>
    <string name="town">Town</string>
    <string name="takePicture">Take Picture</string>
    <!--Fields-->
    <string name="personalInformation">Personal Information</string>
    <string name="location">Location</string>
    <string name="resources">Used Resources</string>
    <string name="otherInformation">Other Information</string>
    <!--Unavailable-->
    <string name="unavailableInformation">Unavailable Information</string>
    <!--Drawer-->
    <string name="burnt">Total Hectare Burnt:</string>
    <string name="currentDistrict">Current District:</string>
    <string name="totalResources">Total Used Resources:</string>
    <string name="totalFires">Total Number of Fires:</string>
    <string name="fire_details">Fire Details</string>
    <string name="no_fires">No active fires</string>
    <string name="filters">Filters</string>
    <!--filters-->
    <string name="radius">Radius</string>
    <string name="apply">Apply</string>
    <string name="clear_filters">Clear</string>
    <string name="select_district">Select district</string>
    <string name="submited_by">Submited by:</string>
    <string name="report_datetime">Date/Time of Report</string>
    <string name="ups_something_went_wrong">Ups! Something went wrong</string>
    <string name="last_updated">Last updated</string>
    <string name="active_resources">Active Resources</string>
    <string name="last_7_days">Last 7 days</string>
    <string name="yesterday">Yesterday</string>
    <string name="active_fires_in">Active Fires In</string>
    <string name="_0">0</string>


</resources>