<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FireRegistrationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            />

        <TextView
            android:id="@+id/tv_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginHorizontal="20dp"
            android:textStyle="bold"
            />


        <EditText
            android:id="@+id/et_nome"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_margin="20dp"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            android:id="@+id/tv_cc_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_number"
            android:layout_marginHorizontal="20dp"
            android:textStyle="bold"
            />


        <EditText
            android:id="@+id/et_cc"
            android:hint="@string/id_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_margin="20dp"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            />

        <TextView
            android:id="@+id/tv_date_time_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_marginHorizontal="20dp"
            android:textStyle="bold"
            />


        <TextView
            android:id="@+id/tv_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2022/04/17 - 20:09:02"
            android:layout_margin="20dp"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            />

        <TextView
            android:id="@+id/tv_district_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/district"
            android:layout_marginHorizontal="20dp"
            android:textStyle="bold"
            />


        <Spinner
            android:id="@+id/spinner_distrito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            />

        <TextView
            android:id="@+id/tv_picture_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/picture"
            android:layout_marginHorizontal="20dp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/bt_take_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Take picture"
            android:layout_margin="20dp"
            android:background="@android:color/transparent"
            />

        <ImageView
            android:id="@+id/iv_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            />

        <Button
            android:id="@+id/bt_submit"
            android:layout_gravity="center_horizontal"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/submit"
            />

    </LinearLayout>

</FrameLayout>