<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FiltersFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            />

        <TextView
            android:id="@+id/tv_district_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/district"
            android:layout_marginHorizontal="20dp"
            android:textStyle="bold"
            />

        <Spinner
            android:id="@+id/spinner_distrito"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:contentDescription="@string/hello_blank_fragment"
            android:background="@drawable/spiner"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            />

        <TextView
            android:id="@+id/tv_radius_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radius"
            android:layout_marginHorizontal="20dp"
            android:textStyle="bold"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            />

        <TextView
            android:id="@+id/progress_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/gradient_right"
            android:textSize="20sp"
            android:textStyle="bold" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            />

        <SeekBar
            android:id="@+id/seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:progressDrawable="@drawable/seek_bar_progress"
            android:thumb="@drawable/seek_thumb"
            />



    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="40dp">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/bt_clear_filters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/clear_filters"
            android:textColor="@color/white"
            android:backgroundTint="@color/gradient_left"
            android:layout_margin="10dp"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/bt_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_margin="10dp"/>

    </LinearLayout>



</FrameLayout>